Fix overflow issue in LexicalEditor toolbar and add custom scrollbar for Windows platform

--- a/renderer/components/LexicalEditor/index.css
+++ b/renderer/components/LexicalEditor/index.css
@@ -1440,7 +1440,7 @@ button.action-button:disabled {
 }
 
 .toolbar {
-  overflow-x: hidden;
+  overflow-x: hidden!important;
   display: flex;
   margin-bottom: 1px;
   background: #ffffffa7;
